src/objects/MCAR_Facility_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>MCAR_Facility__c</referenceTo>
        <relationshipLabel>Facility Contacts</relationshipLabel>
        <relationshipName>Facility_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCAR_City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Contact_Type__c</fullName>
        <label>Contact Type</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Fax__c</fullName>
        <label>Fax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MCAR_Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Telephone__c</fullName>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MCAR_User_Status__c</fullName>
        <formula>MCAR_User__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCAR User Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCAR_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MCAR User Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>MCAR</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Facility_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State / Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Facility Contact</label>
    <listViews>
        <fullName>All_Facility_Contacts</fullName>
        <columns>NAME</columns>
        <columns>MCAR_Contact_Type__c</columns>
        <columns>MCAR_City__c</columns>
        <columns>MCAR_Country__c</columns>
        <columns>Facility__c</columns>
        <columns>MCAR_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Facility Contacts</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facility Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>